src/App.css
html, body, #root
{ 
  height: 100%;
}

.App {
  display: flex;
  flex-flow: column;
  justify-content: space-between;
  height: 100%;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 40vmin;
  pointer-events: none;
}

.App-header {
  background-color: #282c34;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
  padding:10px;
}

.content {
  flex: 1 1 auto;
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  text-align: left;
  padding-bottom:180px;
}

footer {
  position: fixed;
  bottom:0px;
  width:100%;
}

section {
  width: 100%;
}

article {
  padding: 10px;
}

aside {
  min-width: 200px;
  padding: 10px;
  background-color: #ccc;
}

.button-container {
  display: flex;
  flex-flow: row;
  justify-content: flex-start;
}

.button {
  background-color: #61dafb;
  padding:5px;
  border-radius: 2px;
  width: 150px;
  color: #fff;
  cursor: pointer;
  text-align: center;
  user-select: none;
  margin-bottom: 10px;
  margin-right: 10px;
}

.disabled .button {
  background-color: #ccc;
  color:#000;
}

.button:active {
  
  background-color: #99dafb;
}

.button-cost {
  font-size: 0.9em;
  font-style: italic;
}

.bulk-button {
  width: auto;
}

.message-box {
  background-color: #282c34;
  color: #fff;
  padding:10px;
}

.message {
  padding:5px;
}

.button.skill {
  width: 250px;
}

.unlocked {
  background-color: #00ff00;
}
.description {
  font-size:0.8em;
  font-style: italic;
  padding: 5px;
}

.requirement {
  border-top: 2px solid #2accf8;
  border-bottom: 2px solid #2accf8;
  padding: 5px;
}

nav {
  background-color: #282c34;
  width: 100%;
  display: flex;
  flex-flow: row;
  justify-content: flex-start;
}

.tab {
  width: 100px; 
  padding: 10px;
  border-radius: 2px 2px 0 0;
  cursor: pointer;
  color:#fff;
  margin-left: 10px;

}

.tab.active {
  background-color: #fff;
  color:#000;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

